--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
       <div class="center">
       <center><h1>RTGStudio公式</h1></center>
       </div>
+      <h2>※ホームページ工事中※</h2>
+      <p>
+        プログラマーがhtmlとcssを習得するまでこのクソダサいホームページです。
+      </p>
       <h2>RTGStudio概要</h2>
       <p>
-        　「RTGStudio」は学生二人が運営するインディーゲームスタジオです。<br>
-        　インディーゲームならではのユニークなゲームを開発していけたらなと思います。<br>
-        　ゲーム業界に革命を起こしてみせます。
+        　「RTG-studio」は二人の学生によって作られたインディーゲーム開発チームです。<br>
+        　インディーゲームならではのユニークなゲームを開発しています。<br>
       </p>
-      <h2>製作作品</h2>
+      <h2>作品</h2>
       <p>
-        　・<a href="primergrid.html">PRIMER GRID/プライマーグリッド</a>(現在ベータテスト中)<br>
-        　・タイトル未定-カードゲーム(現在開発中)
+        　・PRIMER GRID / プライマーグリッド</a>(現在制作休止中)<br>
+        　・Virtual.Noah / バーチャル・ノア(現在制作中)
       </p>
 
       <h2>公式SNS</h2>
       <p>
         　・<a href="https://www.youtube.com/@SouKun.n">Youtube</a><br>
-        　・<a href="https://twitter.com/RTGStudio_indie">Twitter</a>
+        　・<a href="https://twitter.com/@RTGstduio_indie">Twitter</a>
       </p>
 
 
