--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
       <h2>公式SNS</h2>
       <p>
-        　・<a href="https://www.youtube.com/@SouKun.n">Youtube</a><br>
-        　・<a href="https://twitter.com/@RTGstduio_indie">Twitter</a>
+        　※準備中
       </p>
 
 
