--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp" dir="ltr">
+<html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>RTGStudio</title>
@@ -8,9 +8,11 @@
       <div class="center">
       <center><h1>RTGStudio公式</h1></center>
       </div>
-      <h2>※ホームページ工事中※</h2>
+      <h2>URLが変更されました。</h2>
       <p>
-        プログラマーがhtmlとcssを習得するまでこのクソダサいホームページです。
+            <a href="https://sites.google.com/view/rtg-studio">こちら</a>からアクセスできます。
+      </p>
+
       </p>
       <h2>RTGStudio概要</h2>
       <p>
@@ -25,14 +27,15 @@
 
       <h2>公式SNS</h2>
       <p>
-        　※準備中
+        　・<a href="https://www.youtube.com/@SouKun.n">Youtube</a><br>
+        　・<a href="https://twitter.com/@RTGstduio_indie">Twitter</a>
       </p>
-
 
       <h2>更新情報</h2>
       <p>
         　・2023.7.9　サイトを公開しました。
       </p>
+
 
       <h2>お問い合わせ先</h2>
       <p>
@@ -40,7 +43,7 @@
       </p>
 
       <p>
-        <br><br>©2023-2024 RTG-studio
+        <br><br>©2023 RTG-studio
       </p>
   </body>
 </html>
